# 1st_framework

./: .gitignore  .gitmodules  CMakeLists.txt
100030_client/: client
center/: config.json  main.cpp
common/: CMakeLists.txt  db_buffer.cpp  db_buffer.h  db_def.h  kg_interlockedvariable.h  kmacros.h  knetpacket.cpp  knetpacket.h  krequest_def.h  net_buffer.cpp  net_buffer.hpp
db_proxy/: CMakeLists.txt  db_client.cpp  db_client_manager.cpp  mysql_client.cpp  mysql_client.hpp  redis_client.cpp
gateway/: config.json  main.cpp
logic/: config.json  main.cpp
logic_gateway/: config.json  gateway
logic_server/: config.json
login_gateway/: config.json  gateway
login_server/: config.json
protobuf/: CMakeLists.txt
room_server/: config.json
script/: center_main.lua  logic_main.lua  login_main.lua  room_main.lua  setting.lua
script/center_logic/: load.lua
script/center_logic/net_base/: net_base_logic.lua  net_base_protocol.lua
script/common/: json.lua  load.lua  log.lua  public.lua  redis.lua  timer.lua  type.lua
script/defination/: center_event_def.lua  database_def.lua  error_code_def.lua  event_def.lua  global_config_def.lua  load.lua  login_config_def.lua
script/game_logic/: load.lua
script/game_logic/fight_the_landlord/: fight_the_landlord_logic.lua  fight_the_landlord_protocol.lua
script/game_logic/friend/: friend_logic.lua  friend_protocol.lua
script/game_logic/manager/: game_manager.lua  game_protocol.lua
script/game_logic/service/: room_service.lua
script/game_logic/store/: store_logic.lua  store_protocol.lua
script/game_logic/user_info/: user_info_logic.lua  user_info_protocol.lua
script/manager/: async_manager.lua  event_manager.lua  game_command_manager.lua  global_config_manager.lua  load.lua  net_manager.lua  redis_manager.lua  user_manager.lua
script/module/: center_protocol.lua  logic_protocol.lua  login_protocol.lua  protocol.lua
script/object/: load.lua  user.lua
script/room_logic/: load.lua
script/room_logic/card_shuffler/: bull_fighting_shuffler.lua  shuffler.lua
script/room_logic/class/: base_table.lua  bull_fighting_table.lua
script/room_logic/game/: bull_fighting.lua  game_base.lua
script/room_logic/manager/: room_manager.lua
script/room_logic/tool/: bull_fighting_card_helper.lua  card_helper.lua  id_generator.lua
script/share/: database_def.lua  error_code_def.lua  event_def.lua  load.lua  user.lua
script/test/: card_helper_test.lua  load.lua
server.xcodeproj/: project.pbxproj
server.xcodeproj/project.xcworkspace/xcuserdata/Kelvin.xcuserdatad/: UserInterfaceState.xcuserstate
server.xcodeproj/xcuserdata/Kelvin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
server.xcodeproj/xcuserdata/Kelvin.xcuserdatad/xcschemes/: xcschememanagement.plist
tcp/: CMakeLists.txt  center_client.cpp  center_client.hpp  center_server.cpp  center_server.hpp  game_logic_server.cpp  game_logic_server.hpp  gateway_client.cpp  gateway_client.hpp  gateway_server.cpp  gateway_server.hpp  tcp_base_server.cpp  tcp_base_server.hpp  tcp_client.cpp  tcp_client.hpp  tcp_session.cpp  tcp_session.hpp
tools/make_proto/: debug.sh  gen_proto.sh  google.pb.cc  google.pb.h  google.proto  main  main.cpp
util/: CMakeLists.txt
vm/: CMakeLists.txt  lua_engine.cpp  lua_engine.hpp  lua_net.cpp  lua_net.hpp  lua_redis.cpp
