#将当前目录中的源文件名称赋值给变量 DIR_PROTO_MESSAGE_SRCS
AUX_SOURCE_DIRECTORY(. DIR_PROTO_MESSAGE_SRCS)
#将 src 目录中的源文件编译为共享库
ADD_LIBRARY( proto_message SHARED ${DIR_PROTO_MESSAGE_SRCS})
#将 src 目录中的源文件编译为静态库
ADD_LIBRARY( proto_message_static STATIC ${DIR_PROTO_MESSAGE_SRCS})
#次使用 SET_TARGET_PROPERTIES 定义 CLEAN_DIRECT_OUTPUT属性
#让构建的时候允许同名，但不同后缀的库名
SET_TARGET_PROPERTIES(proto_message PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(proto_message_static PROPERTIES CLEAN_DIRECT_OUTPUT 2)
