#将当前目录中的源文件名称赋值给变量 DIR_VM_SRCS
AUX_SOURCE_DIRECTORY(. DIR_VM_SRCS)
#将 src 目录中的源文件编译为共享库
ADD_LIBRARY( vm SHARED ${DIR_VM_SRCS})
#将 src 目录中的源文件编译为静态库
ADD_LIBRARY( vm_static STATIC ${DIR_VM_SRCS})
#次使用 SET_TARGET_PROPERTIES 定义 CLEAN_DIRECT_OUTPUT属性
#让构建的时候允许同名，但不同后缀的库名
SET_TARGET_PROPERTIES(vm PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(vm_static PROPERTIES CLEAN_DIRECT_OUTPUT 2)
